--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
 
   <p id="msg"></p>
 
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="./app.js"></script>
 </body>
 </html>
