--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -18,7 +18,7 @@
   <h2>Lista</h2>
   <ul id="list"></ul>
 
-  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="./dashboard.js"></script>
 </body>
 </html>
