--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -10,6 +10,7 @@
   <button id="btnLogout">Sair</button>
 
   <h2>Upload</h2>
+  <input id="folderInput" placeholder="Pasta (ex: fotos)" />
   <input type="file" id="fileInput" />
   <button id="btnUpload">Enviar</button>
 
