--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,6 +22,6 @@
   <p id="msg"></p>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="./app.js"></script>
+  <script src="./app.js?v=3"></script>
 </body>
 </html>
