--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -10,7 +10,10 @@
   <button id="btnLogout">Sair</button>
 
   <h2>Upload</h2>
+
   <input id="folderInput" placeholder="Pasta (ex: fotos)" />
+  <br/><br/>
+
   <input type="file" id="fileInput" />
   <button id="btnUpload">Enviar</button>
 
@@ -20,6 +23,6 @@
   <ul id="list"></ul>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./dashboard.js"></script>
+  <script src="./dashboard.js?v=3"></script>
 </body>
 </html>
