--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,27 +1,31 @@
 <!doctype html>
-<html>
+<html lang="pt-br">
 <head>
   <meta charset="utf-8" />
   <title>Meu Drive - Login</title>
+  <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <h1>Meu Drive</h1>
+  <div class="card">
+    <h1>Meu Drive</h1>
+    <div class="subtitle">Seu armazenamento na nuvem</div>
 
-  <h2>Entrar</h2>
-  <input id="loginEmail" placeholder="Email" />
-  <input id="loginPass" type="password" placeholder="Senha" />
-  <button id="btnLogin">Entrar</button>
+    <h2>Entrar</h2>
+    <input id="loginEmail" placeholder="Email" />
+    <input id="loginPass" type="password" placeholder="Senha" />
+    <button id="btnLogin">Entrar</button>
 
-  <hr />
+    <div class="divider"></div>
 
-  <h2>Criar conta</h2>
-  <input id="regEmail" placeholder="Email" />
-  <input id="regPass" type="password" placeholder="Senha" />
-  <button id="btnRegister">Registrar</button>
+    <h2>Criar conta</h2>
+    <input id="regEmail" placeholder="Email" />
+    <input id="regPass" type="password" placeholder="Senha" />
+    <button id="btnRegister">Registrar</button>
 
-  <p id="msg"></p>
+    <p id="msg"></p>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./app.js?v=3"></script>
+  <script src="./app.js?v=4"></script>
 </body>
 </html>
