--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meu Drive - Dashboard</title>
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./styles.css?v=3" />
 </head>
 <body>
   <div class="topbar">
@@ -48,6 +48,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./dashboard.js?v=4"></script>
+  <script src="./dashboard.js?v=5"></script>
 </body>
 </html>
