--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -37,6 +37,12 @@
       <!-- Lista -->
       <div class="panel">
         <h2>Meus arquivos</h2>
+        <input
+  id="searchInput"
+  type="text"
+  placeholder="Buscar arquivos..."
+  style="margin-bottom: 12px"
+/>
         <ul id="list" class="file-list"></ul>
       </div>
     </div>
