Add modal preview for image display

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -49,6 +49,19 @@
       </div>
     </div>
   </div>
+<!-- Modal Preview -->
+<div id="previewModal" class="modal">
+  <div class="modal-content">
+    <div class="modal-header">
+      <div id="previewTitle" class="modal-title">Preview</div>
+      <button id="btnClosePreview" class="btn-light">Fechar</button>
+    </div>
+
+    <div class="modal-body">
+      <img id="previewImg" alt="Preview" />
+    </div>
+  </div>
+</div>
 
   <script src="./dashboard.js?v=10"></script>
 </body>
