--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -35,11 +35,10 @@
       </div>
 
       <!-- Galeria -->
-      <div class="panel">
-        <div class="panel-head">
-          <h2 style="margin:0">Meus arquivos</h2>
-          <input id="searchInput" type="text" placeholder="Buscar..." />
-        </div>
+      <div class="panel-title-row">
+  <button id="btnBackFolder" class="btn-light" type="button" style="display:none">← Voltar</button>
+  <h2 id="filesTitle" style="margin:0">Meus arquivos</h2>
+</div>
 
         <div id="folders" class="folder-bar"></div>
 
