--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,17 +7,17 @@
   <link rel="stylesheet" href="./styles.css?v=2" />
 </head>
 <body>
-  <div class="page-center">
-    <div class="card">
+  <div class="login-page">
+    <div class="login-card">
       <h1>Meu Drive</h1>
-      <div class="subtitle">Seu armazenamento na nuvem</div>
+      <p>Seu armazenamento na nuvem</p>
 
       <h2>Entrar</h2>
       <input id="loginEmail" placeholder="Email" />
       <input id="loginPass" type="password" placeholder="Senha" />
       <button id="btnLogin">Entrar</button>
 
-      <div class="divider"></div>
+      <hr />
 
       <h2>Criar conta</h2>
       <input id="regEmail" placeholder="Email" />
@@ -29,6 +29,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="./app.js?v=5"></script>
+  <script src="./app.js"></script>
 </body>
 </html>
