--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meu Drive - Login</title>
   <link rel="stylesheet" href="./styles.css?v=2" />
+  <link rel="manifest" href="./manifest.json" />
+<meta name="theme-color" content="#061a3a" />
 </head>
 <body>
   <div class="login-page">
