--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meu Drive - Dashboard</title>
   <link rel="stylesheet" href="./styles.css?v=999" />
+  <link rel="manifest" href="./manifest.json" />
+<meta name="theme-color" content="#061a3a" />
 </head>
 <body>
   <div class="dashboard-page">
