--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -12,7 +12,7 @@
   <div class="dashboard-page">
     <header class="topbar">
       <h1>Meu Drive</h1>
-      <button id="btnLogout">Sair</button>
+      <button id="btnLogout" type="button">Sair</button>
     </header>
 
     <main class="dashboard-content">
@@ -20,7 +20,7 @@
         <h2>Upload</h2>
         <input id="folderInput" placeholder="Pasta (ex: fotos)" />
         <input id="fileInput" type="file" />
-        <button id="btnUpload">Enviar</button>
+        <button id="btnUpload" type="button">Enviar</button>
       </section>
 
       <section class="files-card">
