--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Meu Drive - Dashboard</title>
-<link rel="stylesheet" href="./styles.css?v=20260211" />
+<link rel="stylesheet" href="./styles.css?v=fix20260211">
   <link rel="manifest" href="./manifest.json" />
 <meta name="theme-color" content="#061a3a" />
 </head>
@@ -43,6 +43,6 @@
     </div>
   </div>
 
-<script src="./dashboard.js?v=20260211"></script>
+<script src="./dashboard.js?v=fix20260211"></script>
 </body>
 </html>
